[package]
name = "uniplate-derive"
version = "0.2.2"
authors = [
    "Niklas Dewally <niklas@dewally.com>",
    "Özgür Akgün <ozgurakgun@gmail.com>",
]
edition = "2021"
description = "Helper crate for uniplate"
readme = "README.md"
repository = "https://github.com/conjure-cp/uniplate"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
syn = { version = "2.0.93", features = [
    "derive",
    "parsing",
    "printing",
    "clone-impls",
    "proc-macro",
    "extra-traits",
] }
quote = "1.0.38"
log = "0.4.26"
itertools = "0.14.0"
lazy_static = "1.4.0"

[lints.rust]
unstable_name_collisions = "allow"

[lints.clippy]
unwrap_used = "allow"
expect_used = "allow"
