[package]
name = "uniplate"
version = "0.1.5"
authors = [
    "Niklas Dewally <niklas@dewally.com>",
    "Özgür Akgün <ozgurakgun@gmail.com>",
]
edition = "2021"
description = "Simple, boilerplate-free operations on tree-shaped data types"
readme = "../README.md" # use base repository's readme.
repository = "https://github.com/conjure-cp/uniplate"
license = "MPL-2.0"
keywords = ["generics", "traversals", "macro"]
categories = ["rust-patterns", "data-structures", "algorithms"]

[lib]

[dependencies]
im = { version = "15.1.0", features = ["proptest"] }
proptest = "1.6.0"
proptest-derive = "0.5.1"
thiserror = "2.0.9"
uniplate-derive = { version = "0.1.5", path = "../uniplate-derive" }

[dev-dependencies]
trybuild = "1.0.101"

#[lints]
#workspace = true

[features]
unstable = []
